# gubkin-algo-cpp-homework

./: .gitignore  Alg.h  CMakeLists.txt  LICENSE  README.md  Reading_for search.h  Search_Algs.h  Searches.cpp  compression.cpp  compression.h  encryption.cpp  encryption.h  flight.cpp  flight.h  flight_data_2024_semicolon.csv  flight_gen.cpp  flight_gen.h  flight_organizer.cpp  flight_organizer.h  main.cpp  reading_by_instances.cpp  search_test.cpp  sorting.cpp  sorting.h
include/: Search_Algs.h  compression.h  encryption.h  flight.h  flight_organizer.h  graph.h  reading_by_instances.h  sorting.h
src/: compression.cpp  encryption.cpp  flight.cpp  flight_organizer.cpp  graph.cpp  main.cpp  reading_by_instances.cpp  sorting.cpp
